--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: forge install
 
       - name: Run tests
-        run: forge test -vvv --match-path './test/unit/*'
+        run: cd mainnet-contracts && forge test -vvv --match-path './test/unit/*'
 
       # - name: Check gas snapshots
       #   run: forge snapshot 
