--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,6 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: webfactory/ssh-agent@v0.8.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_KEY_PUF }}
 
       - uses: actions/checkout@v4
 
@@ -35,13 +32,10 @@ jobs:
   slither: 
     runs-on: ubuntu-latest
     steps:
-      - uses: webfactory/ssh-agent@v0.8.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_KEY_PUF }}
-          
       - uses: actions/checkout@v4
-
       - uses: crytic/slither-action@v0.3.0
+        with:
+          target: 'mainnet-contracts/src'
 
   solhint:
     runs-on: ubuntu-latest
