--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,14 +14,17 @@ jobs:
     steps:
 
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+
+      - name: Install yarn
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: install # will run `yarn install` command
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
         # with: 
         #   version: nightly-de33b6af53005037b463318d2628b5cfcaf39916
-
-      - name: Install deps
-        run: forge install
 
       - name: Run tests
         run: cd mainnet-contracts && forge test -vvv --match-path './test/unit/*'
@@ -56,5 +59,6 @@ jobs:
         with:
           check_hidden: true
           check_filenames: true
+          ignore_words_list: amountIn
           skip: package-lock.json,*.pdf,./.git
 
