--- a/.github/workflows/mainnet-contracts.yml
+++ b/.github/workflows/mainnet-contracts.yml
@@ -48,4 +48,5 @@ jobs:
       - name: Run Slither
         uses: crytic/slither-action@v0.4.0
         with:
+          ignore-compile: true
           target: 'mainnet-contracts/'
