--- a/.github/workflows/mainnet-contracts.yml
+++ b/.github/workflows/mainnet-contracts.yml
@@ -18,6 +18,9 @@ jobs:
   unit-tests:
     runs-on: ubuntu-latest
     steps:
+      - name: Cancel previous runs
+        uses: styfle/cancel-workflow-action@0.12.1
+      
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
@@ -46,3 +49,8 @@ jobs:
       - name: Run tests
         working-directory: mainnet-contracts
         run: forge test -vvv --match-path './test/unit/*'
+
+      - name: Forge fmt
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "forge fmt"
