--- a/.github/workflows/mainnet-contracts.yml
+++ b/.github/workflows/mainnet-contracts.yml
@@ -16,12 +16,10 @@ jobs:
       - name: Cancel previous runs
         uses: styfle/cancel-workflow-action@0.12.1
       
-      - name: Checkout
       - uses: actions/checkout@v4
         with:
           submodules: 'true'
 
-      - name: Setup Node
       - uses: actions/setup-node@v4
         with:
           cache: 'yarn'
@@ -29,7 +27,8 @@ jobs:
           node-version: 20
 
       - name: Run codespell
-        uses: codespell-project/actions-codespell@v2.0
+        - uses: actions/checkout@v4
+        - uses: codespell-project/actions-codespell@v2.0
         with:
           check_hidden: true
           check_filenames: true
