--- a/.github/workflows/mainnet-contracts.yml
+++ b/.github/workflows/mainnet-contracts.yml
@@ -17,6 +17,9 @@ jobs:
       steps:
         - name: Checkout
           uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
+
         - name: Codespell
           uses: codespell-project/actions-codespell@v2.0
           with:
