--- a/.github/workflows/mainnet-contracts.yml
+++ b/.github/workflows/mainnet-contracts.yml
@@ -9,7 +9,7 @@ on:
     paths:
       - "mainnet-contracts/**"
 
-# jobs:
+jobs:
 #   codespell:
 #       name: Check for spelling errors
 #       runs-on: ubuntu-latest
