--- a/.github/workflows/mainnet-contracts.yml
+++ b/.github/workflows/mainnet-contracts.yml
@@ -10,6 +10,24 @@ on:
       - "mainnet-contracts/**"
 
 jobs:
+#   codespell:
+#       name: Check for spelling errors
+#       runs-on: ubuntu-latest
+
+#       steps:
+#         - name: Checkout
+#           uses: actions/checkout@v4
+#           with:
+#             fetch-depth: 0
+
+#         - name: Codespell
+#           uses: codespell-project/actions-codespell@v2.0
+#           with:
+#             check_hidden: true
+#             check_filenames: true
+#             ignore_words_list: amountIn
+#             skip: package-lock.json,*.pdf,./.git,yarn.lock
+
   unit-tests:
     runs-on: ubuntu-latest
     steps:
@@ -23,7 +41,11 @@ jobs:
           cache-dependency-path: yarn.lock
           node-version: 20
 
+      - name: Branch name
+        run: echo running on branch ${GITHUB_HEAD_REF:-$GITHUB_REF_NAME}
+
       - name: Run codespell
+        uses: actions/checkout@v4
         uses: codespell-project/actions-codespell@v2.0
         with:
           check_hidden: true
