--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "license": "ISC",
   "private": true,
   "workspaces": {
-    "packages": ["mainnet-contracts", "utility-scripts"],
+    "packages": ["mainnet-contracts", "utility-scripts", "l2-contracts"],
     "nohoist": [
       "**/*"
     ]
