--- a/mainnet-contracts/package.json
+++ b/mainnet-contracts/package.json
@@ -7,6 +7,7 @@
     "url": "https://puffer.fi"
   },
   "dependencies": {
+    "l2-contracts": "*",
     "@connext/interfaces": "^2.0.5",
     "@openzeppelin/contracts": "5.0.1",
     "@openzeppelin/contracts-upgradeable": "5.0.1",
