--- a/l2-contracts/foundry.toml
+++ b/l2-contracts/foundry.toml
@@ -14,7 +14,7 @@ auto_detect_solc = false
 optimizer = true
 optimizer_runs = 200
 evm_version = "cancun" # is live on mainnet
-# seed = "0x1337"
+seed = "0x1337"
 solc = "0.8.26"
 # via_ir = true
 
@@ -37,4 +37,8 @@ depth = 110
 runs = 50
 
 [fuzz]
+runs = 100
+
+[profile.ci.fuzz]
 runs = 50000
+seed = ""
