--- a/mainnet-contracts/foundry.toml
+++ b/mainnet-contracts/foundry.toml
@@ -22,6 +22,7 @@ libs = ["lib"]
 auto_detect_solc = false
 # cbor_metadata = false
 # bytecode_hash = "none"
+useLiteralContent=false
 optimizer = true
 optimizer_runs = 200
 evm_version = "cancun" # is live on mainnet
