try inline chmod

--- a/.github/workflows/mainnet-contracts.yml
+++ b/.github/workflows/mainnet-contracts.yml
@@ -54,13 +54,9 @@ jobs:
         # with: 
         #   version: nightly-de33b6af53005037b463318d2628b5cfcaf39916
 
-      - name: Allow go2mul binary execution
-        working-directory: mainnet-contracts
-        run: chmod +x ./test/helpers/go2mul
-
       - name: Run tests
         working-directory: mainnet-contracts
-        run: forge test -vvv --ffi
+        run: chmod +x ./test/helpers/go2mul && forge test -vvv --ffi
         env:
           ETH_RPC_URL: ${{ secrets.ETH_RPC_URL }}
           HOLESKY_RPC_URL: ${{ secrets.HOLESKY_RPC_URL }}
