--- a/.github/workflows/mainnet-contracts.yml
+++ b/.github/workflows/mainnet-contracts.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Run tests
         working-directory: mainnet-contracts
-        run: forge test -vvv --ffi --no-match-contract PufferModuleManagerHoleskyTestnetTest
+        run: forge test -vvv --ffi --no-match-test test_register_operator_eigen_da_holesky
         env:
           ETH_RPC_URL: ${{ secrets.ETH_RPC_URL }}
           HOLESKY_RPC_URL: ${{ secrets.HOLESKY_RPC_URL }}
