--- a/.github/workflows/l2-contracts.yml
+++ b/.github/workflows/l2-contracts.yml
@@ -99,5 +99,7 @@ jobs:
       - name: "Upload coverage report to Codecov"
         uses: "codecov/codecov-action@v4"
         with:
+          verbose: true
+          fail_ci_if_error: true
           files: "./lcov.info"
           token: ${{ secrets.CODECOV_TOKEN }}
