--- a/mainnet-contracts/foundry.toml
+++ b/mainnet-contracts/foundry.toml
@@ -19,9 +19,11 @@ fs_permissions = [{ access = "read-write", path = "./"}]
 src = "src"
 out = "out"
 libs = ["lib"]
+extra_output = ["storageLayout"]
 auto_detect_solc = false
-# cbor_metadata = false
-# bytecode_hash = "none"
+ffi = true
+ast = true
+build_info = true
 useLiteralContent = false
 optimizer = true
 optimizer_runs = 200
