--- a/mainnet-contracts/package.json
+++ b/mainnet-contracts/package.json
@@ -7,14 +7,16 @@
     "url": "https://puffer.fi"
   },
   "dependencies": {
-    "l2-contracts": "*",
     "@connext/interfaces": "^2.0.5",
     "@openzeppelin/contracts": "5.0.1",
     "@openzeppelin/contracts-upgradeable": "5.0.1",
     "eigenlayer-contracts": "https://github.com/Layr-Labs/eigenlayer-contracts.git#4478eb6",
     "eigenlayer-middleware": "https://github.com/bxmmm1/eigenlayer-middleware.git#dbf6c1a",
+    "l2-contracts": "*",
     "murky": "https://github.com/dmfxyz/murky.git",
-    "rave": "https://github.com/PufferFinance/rave.git#57ce268"
+    "openzeppelin-foundry-upgrades": "https://github.com/bxmmm1/openzeppelin-foundry-upgrades.git#patch-1",
+    "rave": "https://github.com/PufferFinance/rave.git#57ce268",
+    "solidity-stringutils": "https://github.com/Arachnid/solidity-stringutils"
   },
   "devDependencies": {
     "@crytic/properties": "https://github.com/crytic/properties#f1ff61b",
