--- a/.github/workflows/l2-contracts.yml
+++ b/.github/workflows/l2-contracts.yml
@@ -69,7 +69,7 @@ jobs:
           file_pattern: '*.sol'
 
       - name: List selectors
-        working-directory: mainnet-contracts
+        working-directory: l2-contracts
         run: |
           forge selectors list >> "$GITHUB_STEP_SUMMARY"
 
