PufferWithdrawalManager (2 step withdrawals) (#41)

--- a/.github/workflows/mainnet-contracts.yml
+++ b/.github/workflows/mainnet-contracts.yml
@@ -10,23 +10,22 @@ on:
       - "mainnet-contracts/**"
 
 jobs:
-#   codespell:
-#       name: Check for spelling errors
-#       runs-on: ubuntu-latest
+  codespell:
+      name: Check for spelling errors
+      runs-on: ubuntu-latest
 
-#       steps:
-#         - name: Checkout
-#           uses: actions/checkout@v4
-#           with:
-#             fetch-depth: 0
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
 
-#         - name: Codespell
-#           uses: codespell-project/actions-codespell@v2.0
-#           with:
-#             check_hidden: true
-#             check_filenames: true
-#             ignore_words_list: amountIn
-#             skip: package-lock.json,*.pdf,./.git,yarn.lock
+        - name: Codespell
+          uses: codespell-project/actions-codespell@v2.0
+          with:
+            path: mainnet-contracts
+            check_hidden: true
+            check_filenames: true
 
   tests:
     runs-on: ubuntu-latest
@@ -45,7 +44,7 @@ jobs:
         run: echo running on branch ${GITHUB_HEAD_REF:-$GITHUB_REF_NAME}
 
       - name: Install yarn
-        uses: borales/actions-yarn@v4
+        uses: borales/actions-yarn@v5
         with:
           cmd: install # will run `yarn install` command
 
@@ -54,12 +53,12 @@ jobs:
         # with: 
         #   version: nightly-de33b6af53005037b463318d2628b5cfcaf39916
 
-      - name: Run tests
-        working-directory: mainnet-contracts
-        run: forge test -vvv --ffi --no-match-test test_register_operator_eigen_da_holesky
-        env:
-          ETH_RPC_URL: ${{ secrets.ETH_RPC_URL }}
-          HOLESKY_RPC_URL: ${{ secrets.HOLESKY_RPC_URL }}
+      # - name: Run tests
+      #   working-directory: mainnet-contracts
+      #   run: forge test -vvv --ffi --no-match-test test_register_operator_eigen_da_holesky
+      #   env:
+      #     ETH_RPC_URL: ${{ secrets.ETH_RPC_URL }}
+      #     HOLESKY_RPC_URL: ${{ secrets.HOLESKY_RPC_URL }}
 
       - name: forge fmt
         working-directory: mainnet-contracts
@@ -71,7 +70,12 @@ jobs:
           commit_message: "forge fmt"
           file_pattern: '*.sol'
 
-  forge-coverage:
+      - name: List selectors
+        working-directory: mainnet-contracts
+        run: |
+          forge selectors list >> "$GITHUB_STEP_SUMMARY"
+
+  coverage:
     runs-on: "ubuntu-latest"
     steps:
       - name: Cancel previous runs
@@ -88,7 +92,7 @@ jobs:
         run: echo running on branch ${GITHUB_HEAD_REF:-$GITHUB_REF_NAME}
 
       - name: Install yarn
-        uses: borales/actions-yarn@v4
+        uses: borales/actions-yarn@v5
         with:
           cmd: install # will run `yarn install` command
 
@@ -97,7 +101,7 @@ jobs:
 
       - name: "Generate the coverage report"
         working-directory: mainnet-contracts
-        run: 'forge coverage --no-match-coverage "(script|test|mock|node_modules|integrations|echidna)"  --no-match-contract "PufferModuleManagerHoleskyTestnetFFI" --report lcov'
+        run: 'forge coverage --no-match-coverage "(script|test|mock|node_modules|integrations|echidna)"  --no-match-contract "PufferModuleManagerHoleskyTestnetFFI" --report lcov -vvv'
         env:
           ETH_RPC_URL: ${{ secrets.ETH_RPC_URL }}
           HOLESKY_RPC_URL: ${{ secrets.HOLESKY_RPC_URL }}
