--- a/.github/workflows/l2-contracts.yml
+++ b/.github/workflows/l2-contracts.yml
@@ -10,23 +10,22 @@ on:
       - "l2-contracts/**"
 
 jobs:
-#   codespell:
-#       name: Check for spelling errors
-#       runs-on: ubuntu-latest
+  codespell:
+      name: Check for spelling errors
+      runs-on: ubuntu-latest
 
-#       steps:
-#         - name: Checkout
-#           uses: actions/checkout@v4
-#           with:
-#             fetch-depth: 0
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
 
-#         - name: Codespell
-#           uses: codespell-project/actions-codespell@v2.0
-#           with:
-#             check_hidden: true
-#             check_filenames: true
-#             ignore_words_list: amountIn
-#             skip: package-lock.json,*.pdf,./.git,yarn.lock
+        - name: Codespell
+          uses: codespell-project/actions-codespell@v2.0
+          with:
+            path: l2-contracts
+            check_hidden: true
+            check_filenames: true
 
   unit-tests:
     runs-on: ubuntu-latest
@@ -45,7 +44,7 @@ jobs:
         run: echo running on branch ${GITHUB_HEAD_REF:-$GITHUB_REF_NAME}
 
       - name: Install yarn
-        uses: borales/actions-yarn@v4
+        uses: borales/actions-yarn@v5
         with:
           cmd: install # will run `yarn install` command
 
@@ -54,9 +53,9 @@ jobs:
         # with: 
         #   version: nightly-de33b6af53005037b463318d2628b5cfcaf39916
 
-      - name: Run tests
-        working-directory: l2-contracts
-        run: export FOUNDRY_PROFILE=ci && forge test -vvv --match-path './test/unit/*'
+      # - name: Run tests
+      #   working-directory: l2-contracts
+      #   run: export FOUNDRY_PROFILE=ci && forge test -vvv --match-path './test/unit/*'
 
       - name: forge fmt
         working-directory: l2-contracts
@@ -68,7 +67,12 @@ jobs:
           commit_message: "forge fmt"
           file_pattern: '*.sol'
 
-  forge-coverage:
+      - name: List selectors
+        working-directory: l2-contracts
+        run: |
+          forge selectors list >> "$GITHUB_STEP_SUMMARY"
+
+  coverage:
     runs-on: "ubuntu-latest"
     steps:
       - name: Cancel previous runs
@@ -85,7 +89,7 @@ jobs:
         run: echo running on branch ${GITHUB_HEAD_REF:-$GITHUB_REF_NAME}
 
       - name: Install yarn
-        uses: borales/actions-yarn@v4
+        uses: borales/actions-yarn@v5
         with:
           cmd: install # will run `yarn install` command
 
@@ -94,7 +98,7 @@ jobs:
 
       - name: "Generate the coverage report"
         working-directory: l2-contracts
-        run: 'forge coverage --no-match-coverage "(script|test|mock|node_modules|integrations|echidna)"  --no-match-contract "PufferModuleManagerHoleskyTestnetFFI" --report lcov'
+        run: 'export FOUNDRY_PROFILE=ci && forge coverage --no-match-coverage "(script|test|mock|node_modules|integrations|echidna)"  --no-match-contract "PufferModuleManagerHoleskyTestnetFFI" --report lcov -vvv'
 
       - name: "Upload coverage report to Codecov"
         uses: "codecov/codecov-action@v4"
