--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "version": "1.0.0",
   "description": "Native Liquid Restaking Protocol",
   "scripts": {
-    "codespell": "codespell ./mainnet-contracts && codespell ./l2-contracts"
+    "codespell": "codespell ./mainnet-contracts && codespell ./l2-contracts",
+    "semgrep": "semgrep --config ./semgrep-rules/"
   },
   "keywords": [
     "ethereum",
