--- a/.github/workflows/mainnet-contracts.yml
+++ b/.github/workflows/mainnet-contracts.yml
@@ -27,6 +27,19 @@ jobs:
             check_hidden: true
             check_filenames: true
 
+        - name: Semgrep
+          run:
+          working_directory: ~/
+          name: Setup Semgrep
+          command: |
+            apk add --no-cache python3 py3-pip make
+            python3 -m pip install --user semgrep==0.86.5
+            export PATH="$HOME/.local/bin:$PATH"
+
+            echo "$ semgrep --version"
+            semgrep --version
+            semgrep --config ./semgrep-rules/
+
   tests:
     runs-on: ubuntu-latest
     steps:
