--- a/.github/workflows/mainnet-contracts.yml
+++ b/.github/workflows/mainnet-contracts.yml
@@ -28,9 +28,9 @@ jobs:
             check_filenames: true
 
         - name: Semgrep
+          uses: actions/setup-python@v5
           run: |
-            apk add --no-cache python3 py3-pip make
-            python3 -m pip install --user semgrep==0.86.5
+            python3 -m pip install semgrep
             export PATH="$HOME/.local/bin:$PATH"
 
             echo "$ semgrep --version"
