Implement deployment of PufferVaultV3 contract

--- a/mainnet-contracts/.env.example
+++ b/mainnet-contracts/.env.example
@@ -2,3 +2,5 @@ PK=deployer private key
 EIGEN_POD_MANAGER=eigen pod manager address
 EIGEN_SLASHER=eigen slasher address
 MAINNET=mainnet rpc url
+HOLESKY_RPC_URL=
+ETHERSCAN_API_KEY=
