--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ mainnet-contracts/out/*
 mainnet-contracts/cache/*
 l2-contracts/out/*
 l2-contracts/cache/*
+partners/merkle-contracts/out/*
+partners/merkle-contracts/cache/*
 **/lcov.info
 
 .DS_Store
