--- a/partners/merkle-contracts/foundry.toml
+++ b/partners/merkle-contracts/foundry.toml
@@ -4,4 +4,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+[rpc_endpoints]
+mainnet="${ETH_RPC_URL}"
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
