--- a/partners/chainlink/foundry.toml
+++ b/partners/chainlink/foundry.toml
@@ -2,5 +2,17 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc_version = "0.8.24"
+optimizer = true
+optimizer_runs = 200
+
+remappings = [
+  '@chainlink/contracts-ccip/=node_modules/@chainlink/contracts-ccip/'
+]
+
+fs_permissions = [{ access = "read-write", path = "./" }]
+
+[etherscan]
+
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
