add mainnet deployment for token pool

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
             "mainnet-contracts",
             "utility-scripts",
             "l2-contracts",
+            "partners/chainlink",
             "partners/merkle-contracts"
         ],
         "nohoist": [
