--- a/partners/chainlink/foundry.toml
+++ b/partners/chainlink/foundry.toml
@@ -7,7 +7,8 @@ optimizer = true
 optimizer_runs = 200
 
 remappings = [
-  '@chainlink/contracts-ccip/=node_modules/@chainlink/contracts-ccip/'
+  '@chainlink/contracts-ccip/=node_modules/@chainlink/contracts-ccip/',
+  "forge-std/=node_modules/forge-std/src/"
 ]
 
 fs_permissions = [{ access = "read-write", path = "./" }]
