feat: replaced bridge in L1RewardManager

--- a/mainnet-contracts/package.json
+++ b/mainnet-contracts/package.json
@@ -8,6 +8,8 @@
     },
     "dependencies": {
         "@connext/interfaces": "^2.0.5",
+        "@layerzerolabs/oapp-evm": "^0.3.2",
+        "@layerzerolabs/lz-evm-protocol-v2": "^3.0.75",
         "@openzeppelin/contracts": "5.0.1",
         "@openzeppelin/contracts-upgradeable": "5.0.1",
         "l2-contracts": "*",
