feat: add puffer-layerzero repo inside partners dir

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "partners/chainlink/lib/forge-std"]
 	path = partners/chainlink/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "partners/layerzero/lib/forge-std"]
+	path = partners/layerzero/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
