--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
             "utility-scripts",
             "l2-contracts",
             "partners/chainlink",
-            "partners/merkle-contracts"
+            "partners/merkle-contracts",
+            "partners/layerzero"
         ],
         "nohoist": [
             "**/*"
