--- a/mainnet-contracts/package.json
+++ b/mainnet-contracts/package.json
@@ -7,8 +7,11 @@
         "url": "https://puffer.fi"
     },
     "dependencies": {
-        "@layerzerolabs/oapp-evm": "^0.3.2",
         "@layerzerolabs/lz-evm-protocol-v2": "^3.0.75",
+        "@layerzerolabs/oapp-evm": "^0.3.2",
+        "@layerzerolabs/oft-evm": "^3.1.3",
+        "@layerzerolabs/lz-evm-messagelib-v2": "^3.0.75",
+        "@layerzerolabs/lz-evm-v1-0.7": "^3.0.75",
         "@openzeppelin/contracts": "5.0.1",
         "@openzeppelin/contracts-upgradeable": "5.0.1",
         "l2-contracts": "*",
@@ -18,6 +21,8 @@
     },
     "devDependencies": {
         "@crytic/properties": "https://github.com/crytic/properties#f1ff61b",
+        "@layerzerolabs/test-devtools-evm-foundry": "^6.0.3",
+        "partners-layerzero": "*",
         "@prb/test": "0.6.4",
         "erc4626-tests": "https://github.com/a16z/erc4626-tests#232ff9b",
         "forge-std": "github:foundry-rs/forge-std#v1.9.6",
