--- a/.github/workflows/mainnet-contracts.yml
+++ b/.github/workflows/mainnet-contracts.yml
@@ -26,6 +26,7 @@ jobs:
             path: mainnet-contracts
             check_hidden: true
             check_filenames: true
+            skip: "pnpm-lock.yaml"
 
   tests:
     runs-on: ubuntu-latest
@@ -101,7 +102,7 @@ jobs:
 
       - name: "Generate the coverage report"
         working-directory: mainnet-contracts
-        run: 'forge coverage --no-match-coverage "(script|test|mock|node_modules|interface|integrations|echidna|L1RewardManagerUnsafe)"  --no-match-contract "PufferModuleManagerHoleskyTestnetFFI" --report lcov -vvv'
+        run: 'forge coverage --no-match-coverage "(script|test|mock|node_modules|interface|integrations|echidna|L1RewardManagerUnsafe)"  --no-match-contract "PufferModuleManagerHoleskyTestnetFFI" --report lcov -vvv --ir-minimum'
         env:
           ETH_RPC_URL: ${{ secrets.ETH_RPC_URL }}
           HOLESKY_RPC_URL: ${{ secrets.HOLESKY_RPC_URL }}
