--- a/mainnet-contracts/package.json
+++ b/mainnet-contracts/package.json
@@ -7,19 +7,26 @@
         "url": "https://puffer.fi"
     },
     "dependencies": {
-        "@connext/interfaces": "^2.0.5",
+        "@layerzerolabs/lz-evm-messagelib-v2": "^3.0.75",
+        "@layerzerolabs/lz-evm-protocol-v2": "^3.0.75",
+        "@layerzerolabs/lz-evm-v1-0.7": "^3.0.75",
+        "@layerzerolabs/oapp-evm": "^0.3.2",
+        "@layerzerolabs/oft-evm": "^3.1.3",
         "@openzeppelin/contracts": "5.0.1",
         "@openzeppelin/contracts-upgradeable": "5.0.1",
         "l2-contracts": "*",
         "murky": "https://github.com/dmfxyz/murky.git",
         "rave": "https://github.com/PufferFinance/rave.git#57ce268",
+        "solidity-bytes-utils": "^0.8.4",
         "solidity-stringutils": "https://github.com/Arachnid/solidity-stringutils"
     },
     "devDependencies": {
         "@crytic/properties": "https://github.com/crytic/properties#f1ff61b",
+        "@layerzerolabs/test-devtools-evm-foundry": "^6.0.3",
         "@prb/test": "0.6.4",
         "erc4626-tests": "https://github.com/a16z/erc4626-tests#232ff9b",
         "forge-std": "github:foundry-rs/forge-std#v1.9.6",
+        "partners-layerzero": "*",
         "solarray": "github:evmcheb/solarray#a547630",
         "solhint": "^5.0.3"
     },
