--- a/l2-contracts/foundry.toml
+++ b/l2-contracts/foundry.toml
@@ -13,9 +13,9 @@ auto_detect_solc = false
 # bytecode_hash = "none"
 optimizer = true
 optimizer_runs = 200
-evm_version = "cancun" # is live on mainnet
+evm_version = "prague" # is live on mainnet
 seed = "0x1337"
-solc = "0.8.28"
+solc = "0.8.30"
 # via_ir = true
 
 [fmt]
