Update config and fix failing test (#130)
* update toml and failing test

* update solidity versions

* fix l2 test

* forge fmt

* update ci

--- a/mainnet-contracts/foundry.toml
+++ b/mainnet-contracts/foundry.toml
@@ -27,9 +27,9 @@ build_info = true
 useLiteralContent = false
 optimizer = true
 optimizer_runs = 200
-evm_version = "cancun" # is live on mainnet
+evm_version = "prague" # is live on mainnet
 seed = "0x1337"
-solc = "0.8.28"
+solc = "0.8.30"
 # via_ir = true
 
 [fmt]
