--- a/.github/workflows/l2-contracts.yml
+++ b/.github/workflows/l2-contracts.yml
@@ -50,8 +50,8 @@ jobs:
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
-        # with: 
-        #   version: nightly-de33b6af53005037b463318d2628b5cfcaf39916
+        with:
+          version: 1.3.6
 
       # - name: Run tests
       #   working-directory: l2-contracts
